<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context="com.myapp.rishabhrawat.foodpanda.activity.SignUp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/foodpandacolor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand"
            android:text="@string/signupact"
            android:textColor="@color/white"
            android:textSize="23dp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/name"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="432dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/quicksand"
        android:hint="@string/name"
        android:paddingLeft="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0"
        app:met_baseColor="@color/darkgray"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/foodpandacolor" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/emailid"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/quicksand"
        android:hint="@string/email"
        android:paddingLeft="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:met_baseColor="@color/darkgray"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/foodpandacolor" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password1"
        android:layout_width="341dp"
        android:layout_height="43dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_lock_open_black_24dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/quicksand"
        android:hint="@string/password"
        android:paddingLeft="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailid"
        app:met_baseColor="@color/darkgray"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/foodpandacolor"
        app:passwordToggleEnabled="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password2"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_lock_open_black_24dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/quicksand"
        android:hint="@string/retypepassword"
        android:paddingLeft="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:met_baseColor="@color/darkgray"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/foodpandacolor"
        app:passwordToggleEnabled="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/phone"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_local_phone_black_24dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/quicksand"
        android:hint="@string/mobileno"
        android:paddingLeft="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2"
        app:met_baseColor="@color/darkgray"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/foodpandacolor" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/foodpandacolor"
        android:fontFamily="@font/quicksand"
        android:text="@string/signupact"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/haveaccount"
        android:textColor="@color/foodpandacolor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
